# scim-skk

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.ja  TODO  bootstrap  configure.ac
data/: Default.sty  Makefile.am  azik-skk.sty
m4/: ChangeLog
po/: .cvsignore  ChangeLog  Makevars  POTFILES.in  ja.po  scim-skk.pot
skim/: AUTHORS  ChangeLog  NEWS  bootstrap  configure.in.in
skim/icons/: Makefile.am
skim/po/: ja.po  skim-scim-skk.pot
skim/setupui/: .cvsignore  Makefile.am  scimskkadddic.cpp  scimskkadddic.h  scimskksettingplugin.cpp  scimskksettingplugin.h  skimplugin_scim_skk_config.desktop  skk.kcfg  skk.kcfgc  skkui.ui
src/: Makefile.am  cdb.cpp  cdb.h  conv_table.cpp  conv_table.cpp.eucjp  conv_table.h  help_message_conv.awk  scim_anthy_automaton.cpp  scim_anthy_automaton.h  scim_skk_automaton.cpp  scim_skk_automaton.h  scim_skk_config.cpp  scim_skk_config.h  scim_skk_core.cpp  scim_skk_core.h  scim_skk_dictionary.cpp  scim_skk_dictionary.h  scim_skk_help_message.txt.in  scim_skk_history.cpp  scim_skk_history.h  scim_skk_imengine.cpp  scim_skk_imengine.h  scim_skk_imengine_setup.cpp  scim_skk_intl.h  scim_skk_keybind.cpp  scim_skk_keybind.h  scim_skk_lookup_table.cpp  scim_skk_lookup_table.h  scim_skk_prefs.h  scim_skk_setup_dictionaries.cpp  scim_skk_setup_dictionaries.h  scim_skk_style_file.cpp  scim_skk_style_file.h
